# leanCLI

./: .env.example  .gitignore  CLAUDE.md  INVARIANTS.md  LeanKohaku.lean  README.md  SECURITY.md  default.nix  lakefile.lean
.github/workflows/: lean_action_ci.yml
LeanKohaku/App/: DaemonMain.lean  Eip712Check.lean  EnsCheck.lean  Main.lean
LeanKohaku/Clearsign/: Bridge.lean
LeanKohaku/Cli/: Commands.lean  DaemonClient.lean  NetworkConfig.lean  Passphrase.lean  Runtime.lean
LeanKohaku/Colibri/: Persistent.lean
LeanKohaku/Contract/: SphincsAccount.lean
LeanKohaku/Daemon/: Config.lean  Server.lean  State.lean  TxJournal.lean
LeanKohaku/Encoding/: Json.lean
LeanKohaku/Ethereum/: Eip712.lean  Ens.lean
LeanKohaku/Invariants/: Account.lean  Eip712.lean  Ens.lean  EthAmount.lean  Network.lean  SphincsAccount.lean  Swap.lean
LeanKohaku/Keystore/: MasterKey.lean  Tpm2Runtime.lean
LeanKohaku/Lib/: Client.lean  Core.lean  Spec.lean
LeanKohaku/Network/: Provider.lean
LeanKohaku/Privacy/: Bridge.lean  NetworkPolicy.lean
LeanKohaku/RPC/: JsonRpc.lean  Outbound.lean
LeanKohaku/Swap/: UniV3.lean  (+1 more)
bridge/: bridge.mjs  chunked-get-logs.mjs  loader.mjs  package-lock.json  ppv1-sepolia-state.json
docs/: ARCHITECTURE.md  CLI.md  DAEMON.md
script/: check_daemon_config.sh  check_m10_autospawn.sh  check_native_helpers.sh  check_privacy_cli.sh  kohakuspawn  r1_sepolia.sh
sidecars/sphincs/vendor-c9/: Cargo.toml  LICENSE.upstream
sidecars/sphincs/vendor-c9/src/: fors.rs  hash.rs  keygen.rs  lib.rs  main.rs  merkle.rs  params.rs  sphincs.rs  verifier.rs  wots.rs
(+52 files in other folders)
